<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_baseline_dashboard_24"/>

        <item android:id="@+id/nav_service"
            android:title="@string/service_provider"
            android:icon="@drawable/ic_baseline_person_24"/>

        <item android:id="@+id/nav_shop"
            android:title="@string/shops"
            android:icon="@drawable/ic_baseline_add_business_24"/>

        <item android:id="@+id/nav_driver"
            android:title="@string/drivers"
            android:icon="@drawable/ic_baseline_drive_eta_24"/>

        <item android:id="@+id/nav_reminder"
            android:title="@string/my_service"
            android:icon="@drawable/ic_baseline_notifications_active_24"/>

        <item android:id="@+id/nav_faq"
            android:title="@string/service_FAQ"
            android:icon="@drawable/ic_baseline_chat_24"/>

        <item android:id="@+id/nav_helper"
            android:title="@string/helper"
            android:icon="@drawable/ic_baseline_adb_24"/>

        <item android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_baseline_lock_24"/>

    </group>

</menu>