<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".spare_part_shops.shop_owner_details.ShopLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_arrow_white_back_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/sign_in" />

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli_bold_italic"
                android:padding="10dp"
                android:text="@string/welcome_text_user_login"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="italic|bold" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email_ed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxStrokeColor="@color/colorPrimaryVariant"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/colorPrimaryVariant"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="@color/colorPrimaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password_ed"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:boxStrokeColor="@color/colorPrimaryVariant"
            app:boxStrokeWidthFocused="2dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/colorPrimaryVariant"
            app:hintTextColor="@color/colorPrimaryVariant"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconTint="@color/colorPrimaryVariant">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot_password_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:paddingRight="10dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryVariant"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button"
            android:fontFamily="sans-serif"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/reg_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="#00000000"
            android:elevation="0dp"
            android:fontFamily="sans-serif"
            android:padding="18sp"
            android:text="@string/new_user_sign_up"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryVariant" />

    </LinearLayout>

</ScrollView>